src/test/compile-fail/bad-module.rs
// error-pattern: unresolved import: ivec
import ivec;

fn main() { let foo = ivec::len([]); }